--- a/src/Componentes/climaHoy.css
+++ b/src/Componentes/climaHoy.css
@@ -1,4 +1,10 @@
-.completo{
+.contenedor{
     display: flex;
     gap: 10px;
+    flex-direction: row-reverse;
+}
+
+.completo{
+    display: flex;   
+    flex-direction: column;
 }
