--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
   background-color: #518b89;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2vmin);*/
   color: white;
 }
