--- a/src/Componentes/climaHoy.css
+++ b/src/Componentes/climaHoy.css
@@ -2,15 +2,16 @@
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 70px;
+    align-content: space-around;
+    justify-content: center;
+    gap: 20px;
     
 }
 
 .completo{
     display: flex;   
-    /*flex-direction:row-reverse;*/
-    gap: 50px;
+    flex-direction:row-reverse;
+    gap: 10px;
 }
 
 .servicio{
