--- a/src/Componentes/climaHoy.css
+++ b/src/Componentes/climaHoy.css
@@ -1,11 +1,57 @@
+.item-1{grid-area: actual;}
+.item-2{grid-area: maximaMinima;}
+.item-3{grid-area: duranteDia;}
+.item-4{grid-area: datos;}
+/*.item-4{grid-area: datos;}*/
 .contenedor{
+    display: grid; 
+    grid-template-areas: 
+    "actual actual duranteDia duranteDia duranteDia "
+    "maximaMinima datos datos datos datos";
+}
+
+.dia-horizontal{
+    border-right: thick solid #f7f7f7;
+    position: absolute;
+}
+.dia-vertical{
     display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    align-content: space-around;
-    justify-content: center;
-    gap: 20px;
-    
+    justify-content: space-around;
+    align-items: flex-end;
+    gap: 40px;
+}
+.barra{
+    width: 20px;
+    align-self: flex-end;
+    background-color: chartreuse;
+}
+
+.b-1{
+    height: 20px;
+}
+.b-2{
+    height: 12px;
+}
+.b-3{
+    height: 20px;
+}
+.b-4{
+    height: 35px;
+}
+.b-5{
+    height: 36px;
+}
+.b-6{
+    height: 50px;
+}
+.b-7{
+    height: 30px;
+}
+.b-8{
+    height: 25px;
+}
+.b-9{
+    height: 18px;
 }
 
 .completo{
@@ -14,7 +60,7 @@
     gap: 10px;
 }
 
-.servicio{
+.item-4{
     width: 80%;
     height: 700px;
     margin: 0 auto;
@@ -23,10 +69,23 @@
     gap: 5px;
 }
 
-.item{
+.ser{
     width: 150px;
     height: 150px;
-    background-color:rgb(63, 11, 11);
+    background-color:rgb(180, 178, 178);
+    padding: 1em;
+    font-weight: 700;
+    color: var(--clr-light);
+    text-align: center;
+    border: 10px solid var(--clr-accent);
+    border-radius: 10px;
+}
+.item-2{
+    display: flex;
+    gap: 15px;
+    width: 150px;
+    height: 60px;
+    background-color: rgb(212, 125, 66);
     padding: 1em;
     font-weight: 700;
     color: var(--clr-light);
