--- a/src/Componentes/climaHoy.css
+++ b/src/Componentes/climaHoy.css
@@ -9,7 +9,10 @@
     "actual actual duranteDia duranteDia duranteDia "
     "maximaMinima datos datos datos datos";
 }
-
+.item-3{
+    width: 100%;
+    height: 50%;
+}
 .dia-horizontal{
     border-right: thick solid #f7f7f7;
     position: absolute;
@@ -33,7 +36,7 @@
     height: 12px;
 }
 .b-3{
-    height: 20px;
+    height: 20%;
 }
 .b-4{
     height: 35px;
@@ -54,6 +57,10 @@
     height: 18px;
 }
 
+.paramDia{
+    text-align:right;
+}
+
 .completo{
     display: flex;   
     flex-direction:row-reverse;
@@ -71,7 +78,7 @@
 
 .ser{
     width: 150px;
-    height: 150px;
+    height: 200px;
     background-color:rgb(180, 178, 178);
     padding: 1em;
     font-weight: 700;
