--- a/src/Componentes/ComponenteClima/climaHoy.css
+++ b/src/Componentes/ComponenteClima/climaHoy.css
@@ -9,22 +9,28 @@
     "actual actual duranteDia duranteDia duranteDia "
     "maximaMinima datos datos datos datos";
 }
-.item-3{
+.item-1{
     width: 100%;
     height: 50%;
+}
+.item-3{
+    width: 70%;
+    height: 50%;
+    gap: 60px;
 }
 .dia-horizontal{
     border-right: thick solid #f7f7f7;
     position: absolute;
+    gap: 60%;
 }
 .dia-vertical{
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    gap: 40px;
+    gap: 60px;
 }
 .barra{
-    width: 20px;
+    width: 30px;
     align-self: flex-end;
     background-color: chartreuse;
 }
